<resources>
    <string name="app_name">Exercicio1IHC</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="input_integer">Digite um numero inteiro</string>
    <string name="sum_button">Clique Para Soma</string>
    <string name="result_text">Result</string>
</resources>